# mono

.github/workflows/: aquarium.yml  canvas-sync-cli.yml  checkhealth.yml  ci.yml  debian13-setup.yml  diff-rs.yml  draw-rs.yml  git-checkout2.yml  git-ln.build.yml  git-ln.yml  heliumd.yml  knewtab.yml  kopiwm.yml  numerical-methods.yml  personal-site.ci.yml  personal-site.yml  simple-tests.yml  stats-calc.yml  sudoku.yml  t-runner.yml  tailwind-rs.yml
code/config/: Makefile  attach.py
code/config/nvim/: init.lua
code/config/zsh/: .zshrc
code/docs/arch-linux/: README.txt  fix-firefox.md  fix-headphones.md  setup-arch.md  setup-cursor.md
code/docs/debian13-setup/: .gitignore  Cargo.toml  Makefile  help.txt  init.txt
code/docs/fontconfig/: FcPatternAdd-Type.3.html  FcPatternAdd.3.html  FcPatternAddWeak.3.html  FcPatternBuild.3.html  FcPatternCreate.3.html  FcPatternDel.3.html  FcPatternDestroy.3.html  FcPatternEqual.3.html  FcPatternEqualSubset.3.html  FcPatternGet-Type.3.html  FcPatternGet.3.html  FcPatternHash.3.html  FcPatternPrint.3.html  FcPatternRemove.3.html  base  dl  run.py
code/docs/xorg/: .gitignore  Makefile  README
code/games/aquarium/: .gitignore  README.md
code/games/sudoku/c++/: .clang-format  CMakeLists.txt  Makefile  board.cpp  board.h  cell.cpp  cell.h  compile_commands.json  game.h  main.cpp
code/tools/draw-rs/: Cargo.toml  Makefile  README.txt
code/tools/parallel-downloader-rust/: Cargo.toml
code/tools/parallel-downloader-rust/src/: downloader.rs  main.rs
health/: Cargo.toml
health/src/: main.rs  workflow.rs
(+1491 files in other folders)
