[package]
name = "rust-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
futures-util = "0.3.28"
indicatif = "0.17.6"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
